@@ -88,11 +88,16 @@ public class WLocationEditor extends WEditor implements EventListener<Event>, Pr
 
     private void init()
     {
-    	getComponent().setButtonImage(ThemeManager.getThemeResource("images/Location16.png"));
+    	if (ThemeManager.isUseFontIconForImage())
+    		getComponent().getButton().setIconSclass("z-icon-Location");
+    	else
+    		getComponent().setButtonImage(ThemeManager.getThemeResource("images/Location16.png"));
     	
     	popupMenu = new WEditorPopupMenu(false, false, isShowPreference());
     	popupMenu.addMenuListener(this);
-    	addChangeLogMenu(popupMenu);    	
+    	addChangeLogMenu(popupMenu);
+		if (gridField != null)
+    		getComponent().getTextbox().setPlaceholder(gridField.getPlaceholder());
     }
     
 	@Override
@@ -106,7 +111,7 @@ public class WLocationEditor extends WEditor implements EventListener<Event>, Pr
     {
         if (m_value == null)
             return null;
-        return new Integer(m_value.getC_Location_ID());
+        return Integer.valueOf(m_value.getC_Location_ID());
     }
 
     @Override
@@ -189,7 +194,7 @@ public class WLocationEditor extends WEditor implements EventListener<Event>, Pr
 		            int C_Location_ID = 0;
 		            if (m_value != null)
 		                C_Location_ID = m_value.getC_Location_ID();
-		            Integer ii = new Integer(C_Location_ID);
+		            Integer ii = Integer.valueOf(C_Location_ID);
 
 		            if (C_Location_ID != 0 && oldValue == 0)
 		            {
